translations_exported/zh/docs_exported/1.17/crafttweaker/docs/vanilla/api/text/Style.md
# Style

## 导入类

It might be required for you to import the package if you encounter any issues (like casting an Array), so better be safe than sorry and add the import at the very top of the file.
```zenscript
import crafttweaker.api.text.Style;
```


## Static Methods

:::group{name=empty}

Return Type: [Style](/vanilla/api/text/Style)

```zenscript
// Style.empty() as Style

Style.empty();
```

:::

## 使用方式

:::group{name=applyFormat}

Return Type: [Style](/vanilla/api/text/Style)

```zenscript
Style.applyFormat(format as ChatFormatting) as Style
```

| 参数     | 类型                                                 | 描述                      |
| ------ | -------------------------------------------------- | ----------------------- |
| format | [ChatFormatting](/vanilla/api/text/ChatFormatting) | No Description Provided |


:::

:::group{name=applyFormats}

Return Type: [Style](/vanilla/api/text/Style)

```zenscript
Style.applyFormats(formattings as ChatFormatting[]) as Style
```

| 参数          | 类型                                                   | 描述                      |
| ----------- | ---------------------------------------------------- | ----------------------- |
| formattings | [ChatFormatting](/vanilla/api/text/ChatFormatting)[] | No Description Provided |


:::

:::group{name=applyLegacyFormat}

Return Type: [Style](/vanilla/api/text/Style)

```zenscript
Style.applyLegacyFormat(format as ChatFormatting) as Style
```

| 参数     | 类型                                                 | 描述                      |
| ------ | -------------------------------------------------- | ----------------------- |
| format | [ChatFormatting](/vanilla/api/text/ChatFormatting) | No Description Provided |


:::

:::group{name=applyTo}

Return Type: [Style](/vanilla/api/text/Style)

```zenscript
Style.applyTo(style as Style) as Style
```

| 参数 | 类型                               | 描述                      |
| -- | -------------------------------- | ----------------------- |
| 样式 | [Style](/vanilla/api/text/Style) | No Description Provided |


:::

:::group{name=getColor}

Return Type: [TextColor](/vanilla/api/text/TextColor)

```zenscript
// Style.getColor() as TextColor

myStyle.getColor();
```

:::

:::group{name=getFont}

Return Type: [ResourceLocation](/vanilla/api/resource/ResourceLocation)

```zenscript
// Style.getFont() as ResourceLocation

myStyle.getFont();
```

:::

:::group{name=getInsertion}

Return Type: **invalid**

```zenscript
// Style.getInsertion() as invalid

myStyle.getInsertion();
```

:::

:::group{name=isBold}

Return Type: boolean

```zenscript
// Style.isBold() as boolean

myStyle.isBold();
```

:::

:::group{name=isEmpty}

Return Type: boolean

```zenscript
// Style.isEmpty() as boolean

myStyle.isEmpty();
```

:::

:::group{name=isItalic}

Return Type: boolean

```zenscript
// Style.isItalic() as boolean

myStyle.isItalic();
```

:::

:::group{name=isObfuscated}

Return Type: boolean

```zenscript
// Style.isObfuscated() as boolean

myStyle.isObfuscated();
```

:::

:::group{name=isStrikethrough}

Return Type: boolean

```zenscript
// Style.isStrikethrough() as boolean

myStyle.isStrikethrough();
```

:::

:::group{name=isUnderlined}

Return Type: boolean

```zenscript
// Style.isUnderlined() as boolean

myStyle.isUnderlined();
```

:::

:::group{name=withBold}

Return Type: [Style](/vanilla/api/text/Style)

```zenscript
Style.withBold(value as invalid) as Style
```

| 参数    | 类型          | 描述                      |
| ----- | ----------- | ----------------------- |
| value | **invalid** | No Description Provided |


:::

:::group{name=withColor}

Return Type: [Style](/vanilla/api/text/Style)

```zenscript
Style.withColor(color as int) as Style
```

| 参数    | 类型  | 描述                      |
| ----- | --- | ----------------------- |
| color | int | No Description Provided |


:::

:::group{name=withColor}

Return Type: [Style](/vanilla/api/text/Style)

```zenscript
Style.withColor(formatting as ChatFormatting) as Style
```

| 参数  | 类型                                                 | 描述                      |
| --- | -------------------------------------------------- | ----------------------- |
| 格式化 | [ChatFormatting](/vanilla/api/text/ChatFormatting) | No Description Provided |


:::

:::group{name=withColor}

Return Type: [Style](/vanilla/api/text/Style)

```zenscript
Style.withColor(textColor as TextColor) as Style
```

| 参数        | 类型                                       | 描述                      |
| --------- | ---------------------------------------- | ----------------------- |
| textColor | [TextColor](/vanilla/api/text/TextColor) | No Description Provided |


:::

:::group{name=withFont}

Return Type: [Style](/vanilla/api/text/Style)

```zenscript
Style.withFont(fontId as ResourceLocation) as Style
```

| 参数     | 类型                                             | 描述                      |
| ------ | ---------------------------------------------- | ----------------------- |
| fontId | [资源位置](/vanilla/api/resource/ResourceLocation) | No Description Provided |


:::

:::group{name=withInsertion}

Return Type: [Style](/vanilla/api/text/Style)

```zenscript
Style.withInsertion(content as invalid) as Style
```

| 参数 | 类型          | 描述                      |
| -- | ----------- | ----------------------- |
| 内容 | **invalid** | No Description Provided |


:::

:::group{name=withItalic}

Return Type: [Style](/vanilla/api/text/Style)

```zenscript
Style.withItalic(value as bool?) as Style
```

| 参数    | 类型    | 描述                      |
| ----- | ----- | ----------------------- |
| value | bool? | No Description Provided |


:::

:::group{name=withObfuscated}

Return Type: [Style](/vanilla/api/text/Style)

```zenscript
Style.withObfuscated(value as invalid) as Style
```

| 参数    | 类型          | 描述                      |
| ----- | ----------- | ----------------------- |
| value | **invalid** | No Description Provided |


:::

:::group{name=withStrikethrough}

Return Type: [Style](/vanilla/api/text/Style)

```zenscript
Style.withStrikethrough(value as invalid) as Style
```

| 参数    | 类型          | 描述                      |
| ----- | ----------- | ----------------------- |
| value | **invalid** | No Description Provided |


:::

:::group{name=withUnderlined}

Return Type: [Style](/vanilla/api/text/Style)

```zenscript
Style.withUnderlined(value as invalid) as Style
```

| 参数    | 类型          | 描述                      |
| ----- | ----------- | ----------------------- |
| value | **invalid** | No Description Provided |


:::


## 参数

| 名称            | 类型                                             | 可获得  | 可设置   | 描述                      |
| ------------- | ---------------------------------------------- | ---- | ----- | ----------------------- |
| bold          | 布尔值                                            | true | false | No Description Provided |
| color         | [TextColor](/vanilla/api/text/TextColor)       | true | false | No Description Provided |
| empty         | 布尔值                                            | true | false | No Description Provided |
| font          | [资源位置](/vanilla/api/resource/ResourceLocation) | true | false | No Description Provided |
| 插入            | **invalid**                                    | true | false | No Description Provided |
| italic        | 布尔值                                            | true | false | No Description Provided |
| obfucated     | 布尔值                                            | true | false | No Description Provided |
| strikethrough | 布尔值                                            | true | false | No Description Provided |
| 下划线           | 布尔值                                            | true | false | No Description Provided |

